@@ -1,3 +1,7 @@
+2004-10-07  Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>
+
+	* cgen-defs.h (ENDSWITCH): Changed to compile with gcc-3.4.2.
+
 2004-07-26  Andrew Cagney  <cagney@gnu.org>
 
 	Problem from Olaf Hering <olh@suse.de>.
